# hcodec

./: .hlint.yml  CHANGELOG.md  README.md  default.nix  hcodec.cabal  hie.yaml
.github/workflows/: haskell-ci.yml
src/: HCodec.hs
