cabal-version:      3.0
name:               hcodec
version:            0.1.0.0
synopsis:           Type-level specifications for binary formats
description:
  Type-level specification and parser derivation for binary formats.
homepage:           https://github.com/emilypi/hcodec
bug-reports:        https://github.com/emilypi/hcodec/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Emily Pillmore
maintainer:         emilypi@cohomolo.gy
copyright:       (c) 2019-2020 Emily Pillmore <emilypi@cohomolo.gy>
category:           HCodec
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with: GHC ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.3

common base-dep
  build-depends: base ^>= { 4.11, 4.12, 4.13, 4.14 }

library
    import: base-dep

    exposed-modules:
      HCodec

    build-depends:    base ^>= { 4.11, 4.12, 4.13, 4.14 }
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall

test-suite hcodec-test
    import: base-dep
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
